--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "bad-words": "^3.0.1",
     "express": "^4.16.4",
+    "multer": "^1.4.1",
     "socket.io": "^2.2.0"
   }
 }
